--- a/style.css
+++ b/style.css
@@ -18,19 +18,19 @@ a {
 }
 
 sub, sup {
-  font-size: 16px;
+  font-size: 1rem;
 }
 
 h1 {
   font-weight: 700;
-  font-size: 18px;
+  font-size: 2rem;
   text-transform: uppercase;
   margin-bottom: 4px;
 }
 
 h2 {
   font-weight: 700;
-  font-size: 16px;
+  font-size: 1rem;
   text-transform: uppercase;
 }
 
@@ -87,6 +87,15 @@ li {
   margin-right: 8px;
 }
 
+.citation {
+  font-size: 0.7rem;
+  background-color: #cccccc;
+  color: #000;
+  padding: 4px;
+  margin-left: 4px;
+  border-radius: 4px;
+}
+
 /* Scrollbar */
 ::-webkit-scrollbar {
   width: 16px;
@@ -141,27 +150,27 @@ li {
 @media screen and (min-width: 600px) {
   /*Typography*/
   section {
-    font-size: 40px;
+    font-size: 2.5rem;
   }
 
   a {
-    font-size: 40px;
+    font-size: 2.5rem;
   }
 
   h1 {
-    font-size: 20px;
+    font-size: 1.3rem;
   }
 
   .columns a {
-    font-size: 24px;
+    font-size: 1.5rem;
   }
 
   sub, sup {
-    font-size: 24px;
+    font-size: 1.5rem;
   }
 
   .description {
-    max-width: 920px;
+    max-width: 950px;
   }
 
   .columns {
